--- a/package.json
+++ b/package.json
@@ -3,33 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint",
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@next/third-parties": "^15.5.2",
-    "lucide-react": "^0.543.0",
-    "motion": "^12.23.12",
-    "next": "^15.5.2",
-    "next-auth": "^4.24.11",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "@next/third-parties": "16.0.1",
+    "better-auth": "^1.3.31",
+    "lucide-react": "^0.552.0",
+    "mongodb": "^6.20.0",
+    "motion": "^12.23.24",
+    "next": "16.0.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@types/node": "^22.18.1",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
-    "eslint": "^9.35.0",
-    "eslint-config-next": "15.3.1",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@types/node": "^22.19.0",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "eslint": "^9.39.0",
+    "eslint-config-next": "16.0.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.3"
   }
 }
