--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@next/third-parties": "16.0.1",
-    "better-auth": "^1.3.31",
+    "@next/third-parties": "^16.0.5",
+    "better-auth": "^1.4.3",
     "lucide-react": "^0.552.0",
-    "mongodb": "^6.20.0",
+    "mongodb": "^6.21.0",
     "motion": "^12.23.24",
-    "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.5",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.16",
-    "@types/node": "^22.19.0",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
-    "eslint": "^9.39.0",
-    "eslint-config-next": "16.0.1",
-    "prettier": "^3.6.2",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/node": "^22.19.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.5",
+    "prettier": "^3.7.3",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.0",
     "typescript": "^5.9.3"
